--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,14 +1,17 @@
 html {
     font-weight: $regular;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'PT Sans', sans-serif;
     line-height: 1.4;
-    color: $off-black;
+    color: $gray;
+
     @media screen and (min-width: 0) {
         font-size: 14px;
     }
+
     @media screen and (min-width: $tablet) {
         font-size: 15px;
     }
+
     @media screen and (min-width: $desktop) {
         font-size: 16px;
     }
@@ -17,7 +20,6 @@ html {
 // headings
 h1 {
     font-size: $h1-size;
-    font-weight: $light
 }
 
 h2 {
@@ -47,6 +49,7 @@ small {
 
 strong {
     font-weight: $bold;
+    color: $secondary
 }
 
 h1,
@@ -55,27 +58,11 @@ h3,
 h4,
 h5,
 h6,
-.title {
+a,
+button {
     line-height: 1.2;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.title {
     margin: 0;
-}
-
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-    font-weight: inherit;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 p {
@@ -83,13 +70,8 @@ p {
     line-height: inherit
 }
 
-main>header,
-main>section>header {
-    display: flex;
-    justify-content: space-between;
-    h1~p {
-        font-size: $h4-size;
-    }
+address {
+    font-style: normal
 }
 
 time {
@@ -102,13 +84,15 @@ time {
 a {
     text-decoration: none;
     cursor: pointer;
+
     &:not(.btn) {
-        color: $gray;
+        color: $color;
         font-weight: $medium;
         @extend .ease;
+
         &:hover,
         &.active {
-            color: $color;
+            color: lighten($color, 15%);
         }
     }
 }
