--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,5 @@
 // fonts
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,400i,900');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,700');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 // partials
 @import 'variables';
@@ -10,6 +10,8 @@
 @import 'animations';
 @import 'nav';
 @import 'buttons';
+@import 'card';
 @import 'tiles';
 @import 'utility';
+@import 'footer';
 @import 'theme';
