--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,22 +1,40 @@
 nav#mainNavbar {
-    height: 60px;
+    height: 190px;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     box-sizing: border-box;
     padding: 16px 24px;
-    background-color: $navGray;
-    margin-bottom: 56px;
-    border-bottom: solid 1px $lineGray;
+    background: linear-gradient(to bottom, #fff 0%, $off-white 40%, rgba(256, 256, 256, .6) 60%, transparent 100%);
+    position: sticky;
+    z-index: 999;
+
     ul {
         display: flex;
         align-items: center;
+
         i {
             line-height: inherit
         }
+
+        a {
+            font-size: 20px;
+            font-weight: 700;
+            text-transform: uppercase
+        }
+
+        img {
+            height: 100px;
+            transform: translateY(-16px)
+        }
+
         li:not(:last-child) {
-            margin-right: 16px
+            margin-right: 48px
+        }
+
+        @media screen and (max-width: $tablet) {
+            display: none
         }
     }
 }
