--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -1,3 +1,98 @@
 #mainHeader {
-    
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    justify-content: space-between;
+    position: relative;
+    box-sizing: border-box;
+
+    &:before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, .4);
+        z-index: 1
+    }
+
+    video {
+        height: calc(100vh - 136px);
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        object-fit: cover;
+        z-index: -1
+    }
+
+    .content {
+        @extend .container;
+        z-index: 999;
+        margin-bottom: 76px;
+        text-shadow: 0 0 6px rgba(0, 0, 0, .25);
+
+        h1 {
+            color: $secondary;
+            line-height: .8
+        }
+
+        h1~p {
+            font-size: 40px;
+            color: $off-white
+        }
+
+        button {
+            margin-top: 56px
+        }
+    }
+
+    .squares {
+        position: absolute;
+        bottom: -56%;
+        right: -160px;
+        z-index: -1;
+        @media screen and (max-width: $tablet) {
+            display: none
+        }
+    }
+}
+
+section {
+    header {
+        text-align: center;
+        padding: 168px 0;
+
+        h2 {
+            font-size: 28px;
+            font-weight: $light;
+            text-transform: uppercase;
+        }
+
+        p {
+            font-size: 24px;
+            padding: 16px 72px;
+        }
+    }
+
+    .slide {
+        @extend .row;
+        margin-bottom: 72px;
+        box-sizing: border-box;
+
+        @media screen and (min-width: $laptop) {
+            height: 300px;
+        }
+
+        img {
+            animation: slide-out .3s ease
+        }
+
+        img,
+        .card {
+            height: 100%
+        }
+    }
 }
