--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,8 +1,9 @@
 // variables
 // colors
-$color: #00CCCC;
-$gray: #9e9e9e;
-$bodyGray: lighten($gray, 36%);
+$color: #033864;
+$secondary: #BEA473;
+$gray: #727272;
+$bodyGray: #F2F2F2;
 $lineGray: rgba(0, 0, 0, .12);
 $lGray: lighten($gray, 34%);
 $dGray: darken($gray, 15%);
@@ -11,12 +12,12 @@ $white: #ffffff;
 $off-white: rgba(255, 255, 255, .8);
 $off-black: rgba(0, 0, 0, .8);
 // typography
-$h1-size: 36px;
-$h2-size: 30px;
-$h3-size: 24px;
-$h4-size: 20px;
-$h5-size: 16px;
-$h6-size: 14px;
+$h1-size: 96px;
+$h2-size: 60px;
+$h3-size: 48px;
+$h4-size: 34px;
+$h5-size: 24px;
+$h6-size: 20px;
 // font weight
 $light: 300;
 $regular: 400;
@@ -26,8 +27,8 @@ $bold: 700;
 $columns: 12;
 $desktop: 1440px;
 $laptop: 1366px;
-$tablet: 1024px;
-$mobile: 720px;
+$tablet: 768px;
+$mobile: 600px;
 $desktop-up: "only screen and (min-width : #{$desktop + 1})";
 $laptop-up: "only screen and (min-width : #{$laptop + 1})";
 $tablet-up: "only screen and (min-width : #{$tablet + 1})";
