--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -9,7 +9,9 @@ $space-values : (0,
 48,
 56,
 64,
-72) !default;
+72,
+80,
+88) !default;
 
 // margin and padding shorthands
 $space-prefixes : (p : padding,
