--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -14,12 +14,21 @@
         position: absolute;
         top: 0;
         left: 0;
-        background: rgba(0, 0, 0, .4);
+        background: rgba(0, 0, 0, .25);
         z-index: 1
+    }
+
+    img.hero {
+        height: 100vh;
+
     }
 
     video {
         height: calc(100vh - 136px);
+    }
+
+    img.hero,
+    video {
         width: 100%;
         position: absolute;
         top: 0;
@@ -36,7 +45,10 @@
 
         h1 {
             color: $secondary;
-            line-height: .8
+            line-height: .8;
+            &.alt {
+                color: $off-white
+            }
         }
 
         h1~p {
@@ -54,6 +66,7 @@
         bottom: -56%;
         right: -160px;
         z-index: -1;
+
         @media screen and (max-width: $tablet) {
             display: none
         }
